# phognet

./: .gitignore  CITATION.cff  Makefile  README.md  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
configs/: train.yaml
docs/: RELEASES.md
scripts/: run_ablation.py  train.py
src/phognet/: cli.py
src/phognet/data/: __init__.py  dataloaders.py
src/phognet/models/: __init__.py  phog_layers.py  phognet.py
src/phognet/training/: early_stopping.py  metrics.py
src/phognet/utils/: env.py  image_vis.py  phog.py  run.py  seed.py  seed_worker.py
tests/: test_imports.py  test_model_forward.py
